2005-08-18  Sam Steingold  <sds@gnu.org>

	* spvw.d (libopen) [!WIN32_NATIVE]: pass RTLD_GLOBAL to dlopen()

2005-08-18  John Hinsdale <hin@alma.com>

	* modules/oracle/orafns.c, oracle.lisp: handle floats as double
	precision by default; allow multiple connects to the same
	server via connection IDs

2005-08-18  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/configure.in: call AC_HEADER_TIME
	* modules/rawsock/rawsock.c: include <time.h>
	so that "struct timeval" will be available on OSX too
	(optional_sockaddr_argument): declare static to avoid a warning

2005-08-16  Sam Steingold  <sds@gnu.org>

	* modules/regexp/regex.h: sync with gnulib (support G++)

2005-08-15  Sam Steingold  <sds@gnu.org>

	* documentation.lisp (documentation, (setf documentation)): specialize
	on CONS, not on NIL, to ensure that NIL is treated as a SYMBOL

2005-08-13  Arseny Slobodyuk  <ampy@users.sourceforge.net>

	* utils/comment5.c (main): init outfilenamebuffer so it
	won't contain trash when piping to exiting program occurs.
	Close infile before exit.

2005-08-12  Arseny Slobodyuk  <ampy@users.sourceforge.net>

	* src/w32shell.c (real_path): fixed a bug with root directory
	checking on Win32 (1252861).

2005-08-11  Sam Steingold  <sds@gnu.org>

	* makemake.in (DEVPREFIX): simplified

2005-08-10  Sam Steingold  <sds@gnu.org>

	* m4/onceonly.m4: use gnulib/m4/onceonly_2_57.m4

2005-08-10  Sam Steingold  <sds@gnu.org>

	* init.lisp (char-invertcase, string-invertcase)
	(nstring-invertcase): export
	* charstrg.d (STRING-INVERTCASE): accept :START and :END
	(NSTRING-INVERTCASE): implemented
	* constsym.d (NSTRING-INVERTCASE): added
	(char-invertcase, string-invertcase): moved from SYS to EXT
	* subr.d (string-invertcase): accept :START and :END
	(nstring-invertcase): added
	* subrkw.d (string-invertcase, nstring-invertcase): added

2005-08-05  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (compile-file): put source line number into the
	name of the compiled top-level form